serving/samples/helloworld-go/service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: helloworld-go
  namespace: default
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: github.com/knative/docs/serving/samples/helloworld-go
            env:
            - name: TARGET
              value: "Go Sample v1"
