serving/samples/helloworld-go/route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: helloworld-go-local
  namespace: default
  labels:
    serving.knative.dev/visibility: cluster-local
spec:
  traffic:
  - tag: current
    configurationName: helloworld-go-local
    latestRevision: true
    percent: 100
---
